tests/ui/associated-inherent-types/not-found-unsatisfied-bounds-in-multiple-impls.stderr
error: the associated type `X` exists for `S<Featureless, Featureless>`, but its trait bounds were not satisfied
  --> $DIR/not-found-unsatisfied-bounds-in-multiple-impls.rs:19:43
   |
LL | struct S<A, B>(A, B);
   | -------------- associated item `X` not found for this struct
LL | struct Featureless;
   | ------------------
   | |
   | doesn't satisfy `Featureless: One`
   | doesn't satisfy `Featureless: Two`
...
LL |     let _: S::<Featureless, Featureless>::X;
   |                                           ^ associated type cannot be referenced on `S<Featureless, Featureless>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Featureless: One`
           `Featureless: Two`

error: aborting due to previous error

